	* configs/lpcxpresso-lpc1768/usbstorage, thttpd, and dhcpd: Add an USB storage,
	  THTTPD web server, and DHCP server configurations for the NXP LPCXpresso board.
	* drivers/lcd/ug-9664hswag01.c and ssd1305.h: Add support for Univision UG-9664HSWAG01
	  OLED with Solomon Systech SD1305 LCD controller.
	* configs/lpcxpresso-lpc1668/nx: Add a NX graphics configuration for the LPCXPRESO
	  board.
	* graphics/nxglib/nxglib_nonintersecting.c: Fix some single bit errors in
	  calculation of non-intersecting regions.  This was causing an anomaly
	  in examples/nx in column 0.
	* drivers/mtd/rammtd.c: Added a RAM based MTD driver.  This RAM driver simulates
	  FLASH and is useful for testing purposes.
	* arch/arm/src/arm/up_head.S: Fix backward conditional compilation.  This cause
	  the configs/mx1ads configuration to fail to build but does not appear to affect
	  any other ARM9 build.
	* fs/nxffs: Adding a tiny, wear-leveling FLASH file system for NuttX.  This
	  file system is intended to be small and will have some limitations.  The
	  implementation is incomplete on initial checkin.
	* apps/examples/nxffs and configs/sim/nxffs:  Add a test a a configuration that
	  will be used to verify NXFFS.
	* fs/fat/fs_fat32.c and fs_fat32util.c: Incorpated two bugs with fixed provided
	  by Sheref Younan.  Thanks!
	* fs/nxffs: After a couple of weeks of testing and bug fixes, NXFSS appears
	  stable and functional.

6.3 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* Remove clock_getutc().  It is replaces with clock_gettime(CLOCK_ACTIVETIME).
	  Add other RTC related changes provided by Uros Platise.
	* arch/arm/src/stm32/stm32_flash.c: Add support for access to on-chp STM32
	  FLASH; beginning of integration with NXFFS (Uros Platise).
	* arch/mips: Added directory structure for PIC32 support
	* configs/pcblogic-pic32mx:  Add directory structure for PCB Logic PIC32MX board
	* apps/include:  Move include/apps to apps/include.  A symbolic link is created at
	  build time